# MichiganTravel_Hop_Durocher

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  BACKEND_GAPS.md  Dockerfile  ENDPOINTS_AND_FLOW.md  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml
backend/controllers/: __init__.py  attraction_controller.py  auth_controller.py  trip_controller.py  trip_day_controller.py  trip_seed_controller.py  trip_stop_controller.py
backend/core/: __init__.py  auth.py  config.py  dependencies.py  tortoise_config.py
backend/core/models/: __init__.py  base.py  conversation.py  image.py  user.py
backend/core/models/places/: __init__.py  attraction.py  attraction_vibe.py  city.py  city_vibe.py  vibe.py
backend/dtos/: __init__.py  agent_dto.py  attraction_dto.py  auth_dto.py  storage_dto.py  trip_day_dto.py  trip_dto.py  trip_seed_dto.py  trip_stop_dto.py
backend/infrastructure/: __init__.py  database.py
backend/migrations/models/: 0_20251121111234_init.py  1_20251121124522_add_michigan_models.py  2_20251121133529_add_trip_status.py  3_20251121155358_add_image_urls.py
backend/prompts/: .gitkeep  __init__.py  trip_seed_agent.py
backend/scripts/: __init__.py  seed_past_trips.py
backend/services/: attraction_service.py  auth_service.py  trip_day_service.py  trip_seed_service.py  trip_service.py  trip_stop_service.py
backend/services/core/: __init__.py  s3_storage.py  storage_exceptions.py  storage_interface.py  storage_service.py
backend/tests/: README.md  conftest.py  test_trip_seed_conversation.py
frontend/: .gitignore  (+6 more)
(+66 files in other folders)
